# labas3

./: CMakeLists.txt  figure.h  googltest.cpp  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  trapezoid.cpp  trapezoid.h
